--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,3 +120,19 @@ body {
     @apply bg-background text-foreground;
   }
 }
+.ice-effect {
+  background-image: url('https://img.freepik.com/free-photo/detailed-orange-grunge-background-with-splats-stains_1048-12955.jpg?semt=ais_hybrid&w=740');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: rgba(173, 216, 230, 0.5);
+  box-shadow: 0 0 15px rgba(173, 216, 230, 0.5);
+  border: 2px solid rgba(173, 216, 230, 0.5);
+  border-radius: 0.5rem;
+  font-weight: 700;
+}
+
+/* .ice-effect:hover {
+  box-shadow: 0 0 15px rgba(173, 216, 230, 0.8);
+  border-color: rgba(173, 216, 230, 0.5);
+} */
